RESOLVED FIXED57483
Chromium Mac crashes when entering fullscreen
https://bugs.webkit.org/show_bug.cgi?id=57483
Summary Chromium Mac crashes when entering fullscreen
David Dorwin
Reported 2011-03-30 11:30:02 PDT
The Mac version of Chromium crashes when entering fullscreen because it hits ASSERT_NOT_REACHED in RenderThemeMac::extraFullScreenStyleSheet(), which was added in changeset 82053. I have a fix.
Attachments
Override extraFullScreenStyleSheet in RenderThemeChromiumMac. (3.25 KB, patch)
2011-03-30 11:58 PDT, David Dorwin
no flags
Jer Noble
Comment 1 2011-03-30 11:42:46 PDT
David, this may be a dup of bug #57400.
Jer Noble
Comment 2 2011-03-30 11:43:11 PDT
Oh, disregard. This is indeed a different issue.
David Dorwin
Comment 3 2011-03-30 11:58:52 PDT
Created attachment 87591 [details] Override extraFullScreenStyleSheet in RenderThemeChromiumMac.
Jer Noble
Comment 4 2011-03-30 12:13:06 PDT
Looks good to me.
WebKit Commit Bot
Comment 5 2011-04-04 13:36:00 PDT
Comment on attachment 87591 [details] Override extraFullScreenStyleSheet in RenderThemeChromiumMac. Clearing flags on attachment: 87591 Committed r82863: <http://trac.webkit.org/changeset/82863>
WebKit Commit Bot
Comment 6 2011-04-04 13:36:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.