2011-04-04  David Dorwin  <ddorwin@chromium.org>

Reviewed by David Levin.

        Chromium Mac crashes when entering fullscreen
        https://bugs.webkit.org/show_bug.cgi?id=57483

        Override extraFullScreenStyleSheet in RenderThemeChromiumMac to avoid hitting the ASSERT_NOT_REACHED in RenderThemeMac.

        * WebCore.gyp/WebCore.gyp:
        * rendering/RenderThemeChromiumMac.h:
        * rendering/RenderThemeChromiumMac.mm:
        (WebCore::RenderThemeChromiumMac::extraFullScreenStyleSheet):

Canonical link: https://commits.webkit.org/72648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82863 268f45cc-cd09-0410-ab3c-d52691b4dbfc