Source/WebCore/rendering/RenderThemeChromiumMac.mm
@@ -135,6 +135,14 @@ String RenderThemeChromiumMac::extraMediaControlsStyleSheet()
     return String(mediaControlsChromiumUserAgentStyleSheet, sizeof(mediaControlsChromiumUserAgentStyleSheet));
 }
 
+#if ENABLE(FULLSCREEN_API)
+String RenderThemeChromiumMac::extraFullScreenStyleSheet()
+{
+    // FIXME: Chromium may wish to style its default media controls differently in fullscreen.
+    return String();
+}
+#endif
+
 bool RenderThemeChromiumMac::paintMediaVolumeSliderContainer(RenderObject* object, const PaintInfo& paintInfo, const IntRect& rect)
 {
     return true;
